// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelect is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="arrowDown"
  iconside="right"
  isloading="false"
>
  <eui-validatable-control>
    <select
      aria-label="aria-label"
      class="euiSelect testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      name="name"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props fullWidth is rendered 1`] = `
<eui-form-control-layout
  fullwidth="true"
  icon="arrowDown"
  iconside="right"
  isloading="false"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiSelect--fullWidth"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props isInvalid is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="arrowDown"
  iconside="right"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <select
      class="euiSelect"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props isLoading is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="arrowDown"
  iconside="right"
  isloading="true"
>
  <eui-validatable-control>
    <select
      class="euiSelect euiSelect-isLoading"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiSelect props options are rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="arrowDown"
  iconside="right"
  isloading="false"
>
  <eui-validatable-control>
    <select
      class="euiSelect"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </eui-validatable-control>
</eui-form-control-layout>
`;
